--- a/styles/index.css
+++ b/styles/index.css
@@ -1,48 +1,104 @@
-*{
-    padding: 0;
-    margin:0;
+/*Fonts*/
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
+* {
+  padding: 0;
+  margin: 0;
 }
-body{
-    background-color: #171717;
-    width:100vw;
+body {
+  background-color: #171717;
+  width: 100vw;
 }
-.navbar{
-    height:8vh;
+.navbar {
+  position: fixed;
+  padding: 2em;
+  width: 100vw;
+  top: 0;
+  height: 4vh;
+  padding-left: 55%;
+  background-color: #171717;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.hero{
-    background-color: #1F1F1F;
-    height: 80vh;
-    max-width:100vw;
-    color:white;
-    display: flex;
-    justify-content: space-between;
-    
-    padding: 0vh 3vw;
+.nav-links {
+  align-self: center;
+  display: flex;
+  justify-content: space-around;
+  width: 25%;
 }
-.hero-text{
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    width:50%;
+.nav-links a {
+  font-family: "Montserrat", sans-serif;
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
 }
-.hero-header{
-    font-weight: bolder;
-    font-size: 96px;
-    margin-bottom:1vh;
+.nav-links li {
+  list-style: none;
 }
-.hero-description{
-    margin-bottom:6vh;
-    font-size: 23px;
-    width:60%;
+img {
+  border: 0;
+  margin: 0;
+  padding: 0;
 }
-.hero-button{
-    font-size: 30px;
-    background-color: #D66700;
-    border-radius: 3px;
-    padding:3px 10%;
+.logo {
+  margin-right: 63%;
+  color: #fff;
+}
+#logo-img {
+  height: 80px;
 }
 
-.hero-image{
-    
+.hero {
+  background-color: #1f1f1f;
+  height: 80vh;
+  max-width: 100vw;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  font-family: "Montserrat", sans-serif;
+  padding: 0vh 3vw;
+}
+.hero-text {
+  margin-left: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 50%;
+}
+.hero-header {
+  font-weight: bolder;
+  font-size: 60px;
+  margin-bottom: 1vh;
+}
+.hero-header div {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+.hero-description {
+  margin-bottom: 6vh;
+  font-size: 18px;
+  width: 60%;
+}
+.hero-button {
+  font-size: 30px;
+  background-color: #d66700;
+  border-radius: 9px;
+  padding: 3px 7%;
+}
+.hero-button a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.hero-image {
+}
+.large-container {
+  position: absolute;
+  width: 1262px;
+  height: 243px;
+  left: 89px;
+  top: 726px;
 }
