--- a/styles/index.css
+++ b/styles/index.css
@@ -9,96 +9,171 @@ body {
   background-color: #171717;
   width: 100vw;
 }
-.navbar {
-  position: fixed;
-  padding: 2em;
-  width: 100vw;
-  top: 0;
-  height: 4vh;
-  padding-left: 55%;
-  background-color: #171717;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.nav-links {
-  align-self: center;
-  display: flex;
-  justify-content: space-around;
-  width: 25%;
-}
-.nav-links a {
-  font-family: "Montserrat", sans-serif;
-  text-decoration: none;
-  color: #fff;
-  font-size: 18px;
-}
-.nav-links li {
-  list-style: none;
-}
-img {
-  border: 0;
-  margin: 0;
-  padding: 0;
-}
-.logo {
-  margin-right: 63%;
-  color: #fff;
-}
-#logo-img {
-  height: 80px;
+@media screen and (min-width: 1000px) {
+  .navbar {
+    position: fixed;
+    padding: 2em;
+    width: 100vw;
+    top: 0;
+    height: 4vh;
+    background-color: #171717;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav-links {
+    margin-right: 10%;
+    align-self: center;
+    display: flex;
+    justify-content: space-around;
+    width: 35%;
+  }
+  .nav-links a {
+    font-family: "Montserrat", sans-serif;
+    text-decoration: none;
+    color: #fff;
+    font-size: 18px;
+  }
+  .nav-links li {
+    list-style: none;
+  }
+
+  img {
+    border: 0;
+    margin: 0;
+    padding: 0;
+  }
+  .logo {
+    color: #fff;
+  }
+  #logo-img {
+    height: 85px;
+  }
+
+  .hero {
+    background-color: #1f1f1f;
+    height: 80vh;
+    max-width: 100vw;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    font-family: "Montserrat", sans-serif;
+    padding: 0vh 3vw;
+  }
+  .hero-text {
+    margin-left: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 50%;
+  }
+  .hero-header {
+    font-weight: bolder;
+    font-size: 60px;
+    margin-bottom: 1vh;
+  }
+  .hero-header div {
+    margin: 0;
+    padding: 0;
+    border: 0;
+  }
+  .hero-description {
+    margin-bottom: 6vh;
+    font-size: 18px;
+    width: 60%;
+  }
+  .hero-button {
+    font-size: 30px;
+    background-color: #d66700;
+    border-radius: 9px;
+    padding: 3px 7%;
+  }
+  .hero-button a {
+    color: #fff;
+    text-decoration: none;
+  }
+
+  .hero-image {
+  }
+  .large-container {
+    position: absolute;
+    width: 1262px;
+    height: 243px;
+    left: 89px;
+    top: 726px;
+  }
 }
 
-.hero {
-  background-color: #1f1f1f;
-  height: 80vh;
-  max-width: 100vw;
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  font-family: "Montserrat", sans-serif;
-  padding: 0vh 3vw;
-}
-.hero-text {
-  margin-left: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
-  width: 50%;
-}
-.hero-header {
-  font-weight: bolder;
-  font-size: 60px;
-  margin-bottom: 1vh;
-}
-.hero-header div {
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-.hero-description {
-  margin-bottom: 6vh;
-  font-size: 18px;
-  width: 60%;
-}
-.hero-button {
-  font-size: 30px;
-  background-color: #d66700;
-  border-radius: 9px;
-  padding: 3px 7%;
-}
-.hero-button a {
-  color: #fff;
-  text-decoration: none;
-}
+@media only screen and (max-width: 768px) {
+  .nav-links {
+    display: none;
+  }
+  .openMenu {
+    display: block;
+    color: #fff;
+    size: 2rem;
+  }
+  #logo-img {
+    height: 20vw;
+  }
 
-.hero-image {
-}
-.large-container {
-  position: absolute;
-  width: 1262px;
-  height: 243px;
-  left: 89px;
-  top: 726px;
+  .hero {
+    background-color: #1f1f1f;
+    height: 80vh;
+    max-width: 100vw;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    font-family: "Montserrat", sans-serif;
+    padding: 0vh 3vw;
+  }
+  .hero-text {
+    margin: 0 20px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 100%;
+  }
+  .hero-header {
+    display: inline;
+    font-weight: bolder;
+    font-size: 15vw;
+    margin-bottom: 1vh;
+  }
+  .hero-header div {
+    margin: 0;
+    padding: 0;
+    border: 0;
+  }
+  .hero-description {
+    margin-top: 2vh;
+    display: block;
+    margin-bottom: 6vh;
+    font-size: 5vw;
+    width: 100%;
+    height: auto;
+  }
+  .hero-button {
+    margin: 0 auto;
+    font-size: 30px;
+    background-color: #d66700;
+    border-radius: 9px;
+    padding: 3px 7%;
+  }
+  .hero-button a {
+    color: #fff;
+    text-decoration: none;
+  }
+
+  .hero-image {
+  }
+  .large-container {
+    position: absolute;
+    width: 1262px;
+    height: 243px;
+    left: 89px;
+    top: 726px;
+  }
 }
