--- a/styles/index.css
+++ b/styles/index.css
@@ -158,6 +158,39 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
+  /********************************** for mobile nav *************************************/
+  .parentmenuclass #navcontainerformob{
+    top: 0;
+    z-index: 4;
+    height: 100vh;
+    width: 40vh;
+    background-image:linear-gradient(black,rgb(51, 45, 45)) ;
+    position: fixed;
+  }
+  .parentmenuclass .hidingbody{
+    background-image:linear-gradient(black,black);
+    z-index: 3;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    opacity: 50%;
+  }
+  .parentmenuclass #navcontainerformob .mainMenumob{
+    display: flex;
+    flex-direction: column;
+    padding: 30px 20px;
+
+  }
+  .parentmenuclass #navcontainerformob .mainMenumob > a{
+    font-size: small;
+    color: rgb(255, 255, 255);
+    margin-bottom: 25px;
+    text-decoration: none;
+  }
+
+
+/* ************************************************************* */
   .navbar {
     display: flex;
     justify-content: space-between;
@@ -203,6 +236,8 @@ body {
     justify-content: space-between;
     font-family: "Montserrat", sans-serif;
     padding: 0vh 3vw;
+    position: relative;
+    z-index: 0;
   }
   .hero-text {
     margin: 0 20px;
