--- a/rennovex-site/src/components/WhatAreWe.module.css
+++ b/rennovex-site/src/components/WhatAreWe.module.css
@@ -52,12 +52,12 @@
     align-items: center;
     justify-content: center;
     height: 40vh;
-
+    margin: 200px 0px;;
 
 }
 .Whatarewe__desc__cont{
     margin-top: 50px;
-    width:70vw;
+    width:50vw;
     background: linear-gradient(107.08deg, #1F1F1F 37.5%, #511111 100%);
     box-shadow: 0px 4px 30px rgba(255, 255, 255, 0.03);
     border-radius: 8px;
@@ -72,7 +72,7 @@
 
 .Whatarewe__desc{
     font-size: 24px;
-    
+    text-align: center;
     color: #FFFFFF;
 }
 }
