--- a/rennovex-site/src/components/WhatWeDo.module.css
+++ b/rennovex-site/src/components/WhatWeDo.module.css
@@ -1,10 +1,65 @@
-@media screen and (max-width:450px){
-    .Whatwedo__main_cont{
-        display: flex;
+.main__container{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin:200px 0px;
+    
+}
+
+.header{
+    display: inline;
+    font-family: 'poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 64px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #ffffff;
+    margin-bottom: 30px;
+}
+
+.track{
+    display: flex;
+}
+
+.card{
+    background: #1F1F1F;
+    border-radius: 28px;
+    height: 200px;
+    padding:20px;
+    margin: 0 10px;
+    width:250px;
+}
+
+.card__header{
+    font-family: 'poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 23px;
+    line-height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-top:-40px;
+    color: #FFFFFF;
+}
+
+.card__container{
+
+}
+
+@media (max-width:950px) {
+
+    .track{
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin: 5%;
+    }
+    .card{
+        margin:20px 0;
     }
     
 }
