footer color fix

--- a/rennovex-site/src/components/Footer.module.css
+++ b/rennovex-site/src/components/Footer.module.css
@@ -1,5 +1,5 @@
 .footer{
-    background-color: black;
+    background-color: rgb(7, 7, 7);
     min-height: 3px;
     display: flex;
     padding:30px 0;
