--- a/rennovex-site/src/components/Footer.module.css
+++ b/rennovex-site/src/components/Footer.module.css
@@ -54,6 +54,7 @@
     /* max-width: 1000px; */
     /* padding-left:50%; */
     margin: 0 auto;
+    justify-content: space-between;
      /* background: rgb(105, 32, 32);  */
 }
    
@@ -62,6 +63,7 @@
    width: 100%;
   display: flex;
   flex-direction: row;
+  margin-top: 3%;
   justify-content: space-between;
   
 }
@@ -69,14 +71,17 @@
     display: flex;
   flex-direction: column;
   text-align: left;
+  padding-right: 5%;
+  
 }
 .chance_column{
     /* background-color: beige; */
-  
+   padding-left: 5%;
     display: flex; 
     flex-direction: column;
+    align-items: ;
     justify-content: flex-start;
-    
+   
 }
 
 
@@ -123,14 +128,31 @@ padding-left:5%;
    }
  .Container{
      padding-left: 20%;
+     
+ }
+ .Column1{
+    margin-top: 20px;
+    /* padding: 10px;   */
+    /* padding-right: 10%; */
+    justify-content: center;
+ } 
+ .chance_column{
+     position: relative;
+     left:-70px;
+     background-color:#171717;
+     border-radius: 7%;
+     width: 180px;
+     height: 60px;
  }
  .Column{
-    margin-top: 20px;
-    padding: 10px;  
- } 
+     position: relative;
+     right: 50px;
+     ;
+ }
+ 
  
  .Heading{
-     font-size: 14px;
+     font-size: 12px;
  }
  .FooterLink{
      font-size: 11px;
@@ -147,3 +169,4 @@ padding-left:5%;
     display:none;
 }
 }
+
