--- a/rennovex-site/src/components/WhatWeDo.module.css
+++ b/rennovex-site/src/components/WhatWeDo.module.css
@@ -53,8 +53,21 @@
     margin-top:-40px;
     color: #FFFFFF;
 }
+.card__header:hover {
+    color: rgb(255, 17, 0); 
+} 
+.card__content{
+    font-size: large;
+    font-family: 'poppins';
+    font-style: normal;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #FFFFFF;
+    margin-top:40px;
 
-
+}
 
 @media (max-width:950px) {
 
