--- a/rennovex-site/src/components/Nav.module.css
+++ b/rennovex-site/src/components/Nav.module.css
@@ -16,6 +16,11 @@ li{
     margin:0 10px;
     font-size: 24;
     font-family: Poppins;
+    cursor: pointer;
+}
+
+li:hover{
+    color:red
 }
 
 @media (max-width:400px) {
