--- a/rennovex-site/src/components/WhatWeDid.module.css
+++ b/rennovex-site/src/components/WhatWeDid.module.css
@@ -60,6 +60,34 @@
     width:25%;
 }
 
+.project__name{
+    font-size: 30px;
+}
+
+.project__desc{
+
+}
+
+.project__link{
+    background-color: white;
+    padding: 5px 30%;
+    font-size: 20px;
+    margin-top: 30px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.project__link:hover{
+    background-color:rgb(211, 211, 211)
+
+}
+
+
+
+.Whatwedid__content img{
+    border-radius: 70px;
+}
+
 .card1, .card2{
     display: flex;
     flex-direction: column;
