--- a/rennovex-site/src/components/Footer.module.css
+++ b/rennovex-site/src/components/Footer.module.css
@@ -120,15 +120,17 @@ padding-left:5%;
 @media (max-width: 1000px) {
 .logos {
  display:flex;
- justify-content:flex-start;
+ justify-content:flex-end;
 
    }
  .Container{
      padding-left: 20%;
+
      
  }
  .Column1{
-    margin-top: 20px;
+    /* margin-top: 20px; */
+    flex-direction: row;
     /* padding: 10px;   */
     /* padding-right: 10%; */
     justify-content: center;
@@ -136,16 +138,20 @@ padding-left:5%;
  .chance_column{
      position: relative;
      left:-70px;
-     background-color:#171717;
+     /* background-color:#171717; */
      border-radius: 7%;
      width: 180px;
      height: 60px;
  }
  .Column{
      position: relative;
-     right: 50px;
+     max-width: fit-content;
+    
+     /* padding-left:80px ; */
+     padding-top:5px; 
      ;
  }
+
  
  
  .Heading{
@@ -157,6 +163,8 @@ padding-left:5%;
  }
  .logo{
      width: 20px;
+     display: flex;
+     justify-content: flex-end;
  }
  .FooterLink:hover {
     color: rgb(255, 17, 0);
@@ -168,3 +176,40 @@ padding-left:5%;
 }
 }
 
+@media (max-width: 480px) {
+    /* .Container{
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+        
+    } */
+    .Column{
+        position: relative;
+        max-width: fit-content;
+      
+        right: -40px;
+        /* padding-left:80px ; */
+        padding-top:5px; 
+        ;
+    }
+    .Column1{
+        /* margin-top: 20px; */
+        flex-direction: column;
+        /* padding: 10px;   */
+        /* padding-right: 10%; */
+        justify-content: center;
+     } 
+     .chance_column{
+        position: relative;
+        left:-60px;
+        background-color:#171717;
+        border-radius: 7%;
+        width: 180px;
+        height: 60px;
+    }
+    .logos {
+        display:flex;
+        justify-content:flex-start;
+       
+          }
+}
