--- a/rennovex-site/src/components/OurTeam.module.css
+++ b/rennovex-site/src/components/OurTeam.module.css
@@ -41,6 +41,11 @@
     cursor: pointer;
 }
 
+.loading{
+    background-color: grey;
+    width:150px
+}
+
 .image__track{
     background: #171717;
     box-shadow: 0px 0px 28px rgba(255, 255, 255, 0.03);
